<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightBlue"
    android:paddingBottom="@dimen/none"
    android:paddingRight="@dimen/none"
    android:paddingTop="@dimen/none"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/h1_enterstop"
        android:layout_marginTop="@dimen/size_header_big"
        android:background="@color/white"
        android:divider="#000000"
        android:dividerPadding="@dimen/size_10dp"
        android:gravity="left"
        android:paddingBottom="@dimen/size_5dp"
        android:paddingLeft="@dimen/size_18dp"
        android:paddingTop="@dimen/size_5dp"
        android:showDividers="middle" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.02"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/stop_num"
            android:inputType="number"
            android:textColorHint="@color/LightGrey"
            android:textSize="@dimen/size_header" >

            <requestFocus />
        </EditText>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_10dp"
            android:layout_marginRight="@dimen/size_18dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/action_search"
            android:drawablePadding="0dp"
            android:text="@string/find_button"
            android:textColor="@color/gray" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/size_10dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/rating_important"
            android:drawablePadding="@dimen/none"
            android:gravity="right|center"
            android:paddingRight="@dimen/size_18dp"
            android:text="@string/save_button"
            android:textColor="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:background="@color/LightGreen"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10dp"
            android:paddingLeft="@dimen/size_14dp"
            android:shadowColor="@color/DarkGray"
	        android:shadowDx="3"
	        android:shadowDy="2"
            android:text="@string/choose_route"
            android:textColor="@color/AliceBlue"
            android:textSize="@dimen/size_header_big" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_14dp"
            android:text="@string/title_2_hint"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/LightSlateGray" />

        <Spinner
            android:id="@+id/select_line"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/none"
            android:layout_marginTop="@dimen/size_14dp"
            android:background="@color/white"
            android:paddingLeft="@dimen/size_14dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/h1_enterstop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/size_10dp"
        android:shadowColor="@color/DarkGray"
        android:shadowDx="3"
        android:shadowDy="2"
        android:text="@string/enter_stop_num"
        android:textColor="@color/AliceBlue"
        android:textSize="@dimen/size_header_big" />

    <TextView
        android:id="@+id/textView_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/h1_enterstop"
        android:layout_below="@+id/h1_enterstop"
        android:layout_marginBottom="@dimen/none"
        android:text="@string/title_1_hint"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/LightSlateGray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
        android:background="@color/Khaki"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/AliceBlue"
            android:textSize="@dimen/size_header_big"
            android:layout_marginLeft="@dimen/size_18dp"
            android:layout_marginTop="@dimen/size_10dp"
            android:shadowColor="@color/DarkGray"
	        android:shadowDx="3"
	        android:shadowDy="2"
            android:text="@string/title_3"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

</RelativeLayout>